# adeptdp

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README.md  autogen.sh  configure  configure.ac  runtests
c-lang/apps/: Makefile.am  Makefile.in  acatfile.c
c-lang/lib/: Makefile.am  Makefile.in  aclock.c  aclock.h  adatetime.c  adatetime.h  adatetime_range.c  adatetime_range.h  afile.c  afile.h  astr.c  astr.h  astr_classifications.c  astr_comparisons.c  astr_conversions.c  astr_edits.c  astr_utilities.c  atm.c  atm.h  atm_range.c  atm_range.h
c-lang/test/: Makefile.am  Makefile.in  adept_unit_test.h  minunit.h  test_aclock.c  test_adatetime.c  test_adatetime_range.c  test_afile.c  test_afile_process.c  test_astr.c  test_astr_classifications.c  test_astr_comparisons.c  test_astr_conversions.c  test_astr_edits.c  test_astr_utilities.c  test_atm.c  test_atm_range.c  test_skeleton.c
docs/: adeptdp_doc.txt  adeptdp_doc.txt~  afile_funcs_doc.txt  astr_funcs_doc.txt
