dnl Process this file with autoconf to produce a configure script
AC_INIT([adeptdp], [1.0.0])
AC_CONFIG_SRCDIR([c-lang/lib/astr.c])
AM_INIT_AUTOMAKE
AC_PROG_CC
# Standard C if possible
AC_PROG_CC_STDC
AC_PROG_RANLIB
AC_OUTPUT(c-lang/test/Makefile c-lang/lib/Makefile c-lang/apps/Makefile Makefile)
AM_PROG_CC_C_O

