bin_PROGRAMS = test_aclock test_atm test_atm_range test_afile test_afile_process test_astr test_astr_classifications test_astr_comparisons test_astr_conversions test_astr_edits test_astr_utilities
test_aclock_SOURCES = test_aclock.c
test_aclock_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_aclock_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_atm_SOURCES = test_atm.c
test_atm_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_atm_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_atm_range_SOURCES = test_atm_range.c
test_atm_range_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_atm_range_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_afile_SOURCES = test_afile.c
test_afile_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_afile_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_afile_process_SOURCES = test_afile_process.c
test_afile_process_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_afile_process_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_SOURCES = test_astr.c
test_astr_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_classifications_SOURCES = test_astr_classifications.c
test_astr_classifications_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_classifications_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_comparisons_SOURCES = test_astr_comparisons.c
test_astr_comparisons_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_comparisons_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_conversions_SOURCES = test_astr_conversions.c
test_astr_conversions_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_conversions_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_edits_SOURCES = test_astr_edits.c
test_astr_edits_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_edits_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
test_astr_utilities_SOURCES = test_astr_utilities.c
test_astr_utilities_LDADD = $(top_builddir)/c-lang/lib/libadeptdp.a
test_astr_utilities_CPPFLAGS = -I $(top_srcdir)/c-lang/lib
